examples/semantics/errors/error5d.grace
fun error5d () : nothing
var c:char;
{
	chr(c);
}
